# UkTxGNN

./: README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check-new-evidence.yml  indexnow.yml  news-monitor.yml  pages.yml.template
config/: fields.yaml
data/news/: synonyms.json
docs/: CNAME  _config.yml  index.md  robots.txt
docs/_drugs/: abacavir.md  acarbose.md  aceclofenac.md  acemetacin.md  acenocoumarol.md  acetarsol.md  acetazolamide.md  acetic_acid.md  acetylsalicylic_acid.md  acipimox.md  acitretin.md  acrivastine.md  activated_charcoal.md  adalimumab.md  adapalene.md  adefovir_dipivoxil.md  agomelatine.md  albendazole.md  alendronic_acid.md  alfacalcidol.md  alfentanil.md  alfentanil_hcl.md  alfuzosin.md  alfuzosin_hcl.md  aliskiren.md  alitretinoin.md  allopurinol.md  almotriptan.md  alprazolam.md  alprostadil.md  alteplase.md  amantadine.md  amantadine_hcl.md  ambrisentan.md  amifampridine.md  amikacin.md  amiloride.md  amiloride_hcl.md  aminophylline.md  amiodarone.md  (+603 more)
docs/_includes/: head_custom.html
docs/data/: drugs.json  keywords.json  search-index.json
docs/fhir/: metadata  metadata.json
docs/fhir/ClinicalUseDefinition/: DB00338-1.json  DB00338-1000.json  DB00338-10000.json  DB00338-100000.json  (+49981 more)
docs/smart/: app.html  launch.html  standalone.html
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  run_kg_prediction.py
scripts/fetchers/: __init__.py  uk_news.py
src/uktxgnn/: __init__.py
(+711 files in other folders)
