[project]
name = "uktxgnn"
version = "0.1.0"
description = "United Kingdom drug repurposing predictions using TxGNN knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uktxgnn", "src/txgnn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
